[package]
name = "pacgraph"
version = "0.1.0"
description = "Work with pacman package graphs"
homepage = "https://codeberg.org/swsnr/pacgraph"
license = "EUPL-1.2 OR GPL-3.0"
edition = "2024"
keywords = ["pacman", "graph", "alpm"]
categories = ["command-line-utilities"]
authors = ["Sebastian Wiesner <sebastian@swsnr.de>"]

[features]
# Include shell completions in the CLI tool, behind a --print-completions flag
completions = ["dep:clap_complete"]

[dependencies]
alpm = "4.0.2"
alpm-utils = "4.0.1"
anstream = "0.6.21"
anstyle = "1.0.13"
clap = { version = "4.5.48", features = ["derive"] }
clap_complete = { version = "4.5.48", optional = true }
petgraph = { version = "0.8.3", default-features = false, features = [
    "std",
    "graphmap",
] }
termtree = "0.5.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "tracing-log",
] }
